syntax = "proto3";
package protobuf;
option go_package="github.com/youzhicode/golang/protobuf/proto/gen/go;trippb";

//protobuf 所有字段都是可选的，如果不填写，那么就是零值


message Location {
    double Latitude = 1;
    double Longitude = 2;
}


enum TripStatus {
    TS_NOT_SPECIFIED = 0;
    NOT_STARTED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    PAID = 4;
}

message Trip {
    string start = 1;
    string end = 2;
    int64 duration_sec = 3;
    int64 fee_cent = 4;
    Location start_pos = 5;
    Location end_pos = 6;
    repeated Location path_locations = 7;
    TripStatus status = 8;
}

message GetTripRequest {
    string id = 1;
}

message GetTripResponse {
    string id = 1;
    Trip trip = 2;
}

service TripService {
    rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}